ghc-4335c07/testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardNotPresent.stderr

ExtraConstraintsWildcardNotPresent.hs:6:11: error:
    No instance for (Show a) arising from a use of ‘show’
    Possible fix:
      add (Show a) to the context of
        the inferred type of show' :: a -> String
    In the expression: show x
    In an equation for ‘show'’: show' x = show x
